feat: define additional_exposed_ports in Notebook
